--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -2,7 +2,7 @@
   "bannersTop": [
     {
       "mobile": "/assets/images/banner/masonry/kok-mobile-banner.jpg",
-      "desktop": "/assets/images/banner/masonry/english/noblessa-kok-natbutiken-en.webp"
+      "desktop": "/assets/images/banner/masonry/noblessa-kok-natbutiken.jpg"
     },
     {
       "mobile": "/assets/images/banner/masonry/sport-mobile-top.jpg",
@@ -10,24 +10,24 @@
     },
     {
       "mobile": "/assets/images/banner/masonry/fritid-mobile-banner.jpg",
-      "desktop": "/assets/images/banner/masonry/english/banner-3-en.webp"
+      "desktop": "/assets/images/banner/masonry/fritid-banner-top.jpg"
     },
     {
       "mobile": "/assets/images/banner/masonry/badrum-mobile-top.jpg",
-      "desktop": "/assets/images/banner/masonry/english/banner-4-en.webp"
+      "desktop": "/assets/images/banner/masonry/banner-4.jpg"
     },
     {
       "mobile": "/assets/images/banner/masonry/banner-mobile-5.jpg",
       "desktop": "/assets/images/banner/masonry/banner-5.jpg"
     },
     {
-      "mobile": "/assets/images/banner/masonry/banner-mobile-6.jpg",
-      "desktop": "/assets/images/banner/masonry/english/contura-banner-en.webp"
+      "mobile": "/assets/images/banner/masonry/kaminer-mobile-banner.jpg",
+      "desktop": "/assets/images/banner/masonry/contura-banner.jpg"
     }
   ],
   "sliderPhotos": [
     {
-      "mobile": "/assets/images/banner/slider/mobile/banner-1.jpg",
+      "mobile": "/assets/images/banner/slider/mobile/summerSale.jpg",
       "desktop": "/assets/images/banner/slider/summerSale.jpg"
     },
     {
@@ -41,22 +41,22 @@
   ],
   "bannersStartpage": [
     {
-      "mobile": "/assets/images/banner/slider/mobile/banner-1.jpg",
-      "desktop": "/assets/images/banner/banner-3.jpg"
+      "mobile": "/assets/images/banner/slider/mobile/summerSale.jpg",
+      "desktop": "/assets/images/banner/summerSale.jpg"
     },
     {
-      "mobile": "/assets/images/banner//myresjohusBannermyresjohusbannerMobil.jpg",
+      "mobile": "/assets/images/banner/myresjohusBannermyresjohusbannerMobil.jpg",
       "desktop": "/assets/images/banner/myresjohusBannermyresjohusbanner.jpg"
     }
   ],
   "products": "products",
   "productDesc": "en",
-  "error-heading": "Looks like you are lost",
+  "error-heading": "It looks like you've gone astray",
   "error-sub-heading": "We can't find the page you're looking for",
-  "support-heading": "Talk To A Real Person",
-  "support-sub-heading": "Are you on the fence? Have a question? Need a recommendation? Member Services is always here to help. Send us a message.",
-  "app-heading": "Nätbutiken",
-  "app-sub-heading": "<span> Upptäck nya <strong>Idéer</strong> & Handla lokal <strong>Inspiration</strong> direkt från vår butik </span>",
+  "support-heading": "Talk to us in support",
+  "support-sub-heading": "Not sure? Have a question? Need a recommendation? Member service is always here to help. Send us a message.",
+  "app-heading": "The Online Store",
+  "app-sub-heading": "<span> Discover new <strong>Products</strong> & Shop easily directly from our store </span>",
   "collection-title-one": "New Spring Knits",
   "collection-description-one": "Endlessly versatile new styles that say yes to spring. The season’s looking bright.",
   "collection-title-two": "Down To The Core",
@@ -80,16 +80,16 @@
   "text-page-explore": "explore",
   "text-page-header": "Page Heading",
   "text-page-order": "Order",
-  "text-page-checkout": "Checkout",
-  "text-page-contact-us": "Questions? Get in Touch!",
+  "text-page-checkout": "To Checkout",
+  "text-page-contact-us": "Questions? Contact us!",
   "text-page-my-account": "My Account",
   "text-page-terms-of-service": "Terms of Service",
-  "text-page-returns": "Returrätt & Ångerrätt",
+  "text-page-returns": "Returns & Right of Withdrawal",
   "text-page-privacy-policy": "Privacy Policy",
   "text-page-faq": "Frequently Asked Questions",
-  "text-page-support": "Support",
-  "text-page-about": "About",
-  "text-subscribe-heading": "Get Expert Tips In Your Inbox",
+  "text-page-support": "What do you need help with?",
+  "text-page-about": "About Us",
+  "text-subscribe-heading": "Get expert tips in your inbox",
   "text-subscribe-description": "Subscribe to our newsletter and stay updated.",
   "text-banner-thumbnail": "Banner Thumbnail",
   "text-brand-thumbnail": "Brand Thumbnail",
@@ -105,32 +105,34 @@
   "text-orders": "Orders",
   "text-status": "Status",
   "text-actions": "Actions",
-  "text-filters": "Filters",
+  "text-filters": "Filter",
   "text-colors": "Colors",
-  "text-clear-all": "Clear All",
+  "text-clear-all": "Clear all",
   "text-category": "Category",
   "text-tags": "Tags",
-  "text-sku": "SKU",
+  "text-sku": "SKU:",
   "text-brands": "Brands",
   "text-gender": "Gender",
   "text-account-details": "Account Details",
   "text-change-password": "Change Password",
   "text-change-your-password": "change your password",
-  "text-logout": "Logout",
+  "text-logout": "Log out",
   "text-unit-price": "Unit Price",
   "text-price": "Price",
-  "text-shopping-cart": "Shopping cart",
+  "text-shopping-cart": "Shopping Cart",
   "text-empty-cart": "Your cart is empty.",
-  "text-proceed-to-checkout": "Proceed To Checkout",
+  "text-proceed-to-checkout": "Proceed to Checkout",
   "text-your-order": "Your Order",
   "text-product": "Product",
   "text-products": "Products",
-  "text-add-to-cart": "Add To Cart",
-  "text-add-to-cart-special": "Special order",
+  "text-add-to-cart": "Add to Cart",
+  "text-add-to-cart-special": "Special Order",
   "text-view-cart": "View Cart",
-  "text-added-to-bag": "Added to the bag",
+  "text-added-to-bag": "Added to Cart",
   "text-view-details": "View Details",
+  "text-countryRestriction": "This product is not yet sold in your country",
   "text-shipping": "Shipping",
+  "text-free-shipping": "Free Shipping",
   "text-shipping-address": "Shipping Address",
   "text-sub-total": "Subtotal",
   "text-total": "Total",
@@ -138,13 +140,13 @@
   "text-date": "Date",
   "text-note": "Note",
   "text-map": "Map",
-  "text-payment-method": "Payment method",
+  "text-payment-method": "Payment Method",
   "text-free": "Free",
   "text-close": "Close",
   "text-or": "Or",
   "text-and": "and",
   "text-account": "Account",
-  "text-no-account": "Don't have any account?",
+  "text-no-account": "Don't have an account?",
   "text-have-account": "Already have an account?",
   "text-back-to": "Back to",
   "text-login": "Login",
@@ -153,27 +155,26 @@
   "text-terms": "terms",
   "text-policy": "policy",
   "text-forgot-password": "Forgot password?",
-  "text-reset-password": "Reset Password",
-  "text-get-in-touch": "Get in touch",
+  "text-reset-password": "Reset password",
+  "text-get-in-touch": "Ask a question and we'll answer!",
   "text-find-us-here": "Find us here",
   "text-address": "Address",
   "text-address-details": "4 Strandgatan, 22100 Mariehamn",
   "text-email": "Email",
   "text-email-details": "info@nätbutiken.ax",
   "text-phone": "Phone",
-  "text-phone-details": "+1 1234 5678 90, +1 0987 6543 21",
+  "text-phone-details": "+358 18 14554",
   "text-order-received": "Thank you. Your order has been received.",
   "text-pay-cash": "Pay with cash upon delivery.",
-  "text-tax": "V.A.T",
-  "text-order-details": "Order details",
+  "text-order-details": "Order information",
   "text-details": "Details",
   "text-recent-orders": "recent orders",
-  "text-discount": "1000S Of New Items Just Added: Extra 20% Sale. Selected Items. Prices As Marked.",
-  "text-time-over": "Time Over!",
+  "text-discount": "One hundred new items just added! Extra 20% off selected items.",
+  "text-time-over": "Time is up",
   "text-days": "days",
   "text-hours": "hours",
-  "text-mins": "mins",
-  "text-secs": "secs",
+  "text-mins": "minutes",
+  "text-secs": "seconds",
   "text-fashion": "Fashion",
   "text-sports": "Sports",
   "text-man": "Man",
@@ -183,15 +184,15 @@
   "text-exclusive": "Exclusive",
   "text-sold": "Sold",
   "text-available": "Available",
-  "text-see-all-product": "See All Product",
+  "text-see-all-product": "See All Products",
   "text-section-title": "Section Title",
   "text-flash-sale": "Flash Sale",
-  "text-shop-by-category": "Shop By Category",
+  "text-shop-by-category": "Popular Categories",
   "text-featured-categories": "Featured Categories",
   "text-browse-categories": "Browse Categories",
-  "text-top-brands": "Top Brands",
-  "text-featured-products": "Featured Products",
-  "text-on-selling-products": "On Selling Products",
+  "text-top-brands": "Popular Brands",
+  "text-featured-products": "Top-selling products/Featured products",
+  "text-on-selling-products": "Discounted products",
   "text-top-products": "Top Products",
   "text-related-products": "Related Products",
   "text-new-arrivals": "New Arrivals",
@@ -203,8 +204,8 @@
   "text-newest": "Newest",
   "text-testimonial": "Testimonial",
   "text-popularity": "Popularity",
-  "text-price-low-high": "Price: low to high",
-  "text-price-high-low": "Price: high to low",
+  "text-price-low-high": "Price: Low to High",
+  "text-price-high-low": "Price: High to Low",
   "text-instagram": "Instagram",
   "text-twitter": "Twitter",
   "text-facebook": "Facebook",
@@ -227,26 +228,26 @@
   "text-new": "New",
   "text-super-shop": "Super Shops Near You",
   "text-call-now": "Call Now",
-  "text-cookies-title": "This site uses cookies to improve your experience. By clicking, you agree to our Privacy Policy.",
+  "text-cookies-title": "This site uses cookies to improve your experience. By clicking accept, you agree to our privacy policy.",
   "text-top-brands-deal": "Top Brands Deal",
   "text-upto": "Up To",
   "text-60%-discount": "60% off on brands",
   "text-trending-products": "Trending Products",
   "text-trending-collection": "Trending Collection",
-  "text-recently-view-products": "Recently View Products",
+  "text-recently-view-products": "Recently Viewed Products",
   "text-scroll-to-top": "Scroll to top",
-  "text-thank-you": "Thanks for your order!",
-  "text-order-confirmed": "Order bekräftelse",
+  "text-thank-you": "Thank you for your order!",
+  "text-order-confirmed": "Order Confirmation",
   "login-helper": "Login with your email & password",
   "registration-helper": "By signing up, you agree to our",
   "forgot-password-helper": "We'll send you a link to reset your password",
-  "button-load-more": "Load More",
-  "button-go-home": "Go Home",
-  "button-place-order": "Place Order",
+  "button-load-more": "Load more products",
+  "button-go-home": "Back to homepage",
+  "button-place-order": "Pay for your order",
   "button-send-message": "Send Message",
   "button-submit": "Submit",
   "button-view": "view",
-  "about": "Welcome to Åland's Online Store – your go-to destination for easy shopping. Whether you live on Åland, are planning a visit, or simply want to enjoy our exclusive goods, we have something for everyone. Here, you'll find a wide range of products, from local delicacies and crafts to electronics and fashion. Our goal is to combine the convenience of online shopping with the best that Åland has to offer. Shop easily with us – we deliver to both Åland and the mainland.",
+  "about": "Welcome to Åland's Online Store – your destination for easily shopping for products. Whether you live in Åland, are planning a visit, or simply want to discover our exclusive items, we have something for everyone. Here you'll find a wide range of products, from local delicacies and crafts to technology and fashion. Our ambition is to combine the convenience of online shopping with the best Åland has to offer. Shop easily and smoothly with us – we deliver to all households in Åland.",
   "button-save": "Save",
   "button-app-store": "App Store",
   "button-play-store": "Play Store",
@@ -254,53 +255,52 @@
   "button-men-exclusive": "#men exclusive",
   "button-women-exclusive": "#women exclusive",
   "button-view-collection": "View Collection",
-  "button-chat-services": "Chat With Member Services",
+  "button-chat-services": "Talk to our support",
   "tab-all-collection": "All Collection",
-  "nya-produkter": "New products",
-  "sommar-rea": "Summer sale",
-  "host-rea": "Autum sale",
-  "tab-mens-collection": "Mens Collection",
-  "tab-womens-collection": "Womens Collection",
+  "nya-produkter": "New Products",
+  "sommar-rea": "Summer Sale",
+  "host-rea": "Autumn Sale",
+  "tab-mens-collection": "Men's Collection",
+  "tab-womens-collection": "Women's Collection",
   "tab-kids-collection": "Kids Collection",
   "tab-flash-sale": "Flash Sale",
   "tab-best-sellers": "Best Sellers",
   "tab-featured": "Featured",
-  "support-form": "Support form",
+  "support-form": "Support Form",
   "yes": "Yes",
   "no": "No",
-  "warningTextLocation": "You have products in your cart that will disappear if you change countries. Do you still want to change?",
-  "productDetails": "Product details",
-  "TecnicalData": "Technical data",
-  "additionalInformation": "Additional information",
+  "warningTextLocation": "You have products in your cart that will disappear if you change country. Do you want to change anyway?",
+  "productDetails": "Product Details",
+  "TecnicalData": "Technical Data",
   "Reviews": "Reviews",
-  "weight": "Net weight (kg)",
+  "weight": "Net Weight (g)",
   "height": "Height (mm)",
   "width": "Width (mm)",
   "depth": "Depth (mm)",
-  "vedlängd": "Maximum log length (cm)",
-  "effekt": "Power",
-  "voltage": "Spänning (V)",
-  "powerConsumption": "Energiförbrukning (W)",
-  "current": "Strömstyrka (A)",
-  "frequency": "Frekvens (Hz)",
+  "vedlängd": "Max Log Length (cm)",
+  "effekt": "Power (W)",
+  "voltage": "Voltage (V)",
+  "powerConsumption": "Power Consumption (W)",
+  "current": "Current (A)",
+  "frequency": "Frequency (Hz)",
   "material": "Material",
-  "capacity": "Kapacitet (liter)",
-  "batteryLife": "Batteritid (timmar)",
-  "noiseLevel": "Ljudnivå (dB)",
-  "IPRating": "IP-klassificering",
-  "weightCapacity": "Maxviktkapacitet (kg)",
-  "operatingTemperature": "Driftstemperatur (°C)",
-  "storageTemperature": "Förvaringstemperatur (°C)",
-  "humidity": "Luftfuktighet (%)",
-  "colorTemperature": "Färgtemperatur (K)",
-  "lumen": "Ljusstyrka (lm)",
-  "rotationSpeed": "Rotationshastighet (RPM)",
-  "waterPressure": "Vattentryck (bar)",
-  "fuelType": "Bränsletyp",
-  "airflow": "Luftflöde (m³/h)",
-  "installationType": "Installationstyp",
-  "energyClass": "Energieffektivitet (klass)",
-  "BurnerPower": "Burner power",
+  "capacity": "Capacity (liters)",
+  "batteryLife": "Battery Life (hours)",
+  "noiseLevel": "Noise Level (dB)",
+  "IPRating": "IP Rating",
+  "weightCapacity": "Max Weight Capacity (kg)",
+  "operatingTemperature": "Operating Temperature (°C)",
+  "storageTemperature": "Storage Temperature (°C)",
+  "humidity": "Humidity (%)",
+  "colorTemperature": "Color Temperature (K)",
+  "lumen": "Luminosity (lm)",
+  "rotationSpeed": "Rotation Speed (RPM)",
+  "waterPressure": "Water Pressure (bar)",
+  "fuelType": "Fuel Type",
+  "airflow": "Airflow (m³/h)",
+  "installationType": "Installation Type",
+  "energyClass": "Energy Efficiency (class)",
+  "BurnerPower": "Burner Power",
   "color": "Color",
   "colors": "Colors",
   "black": "Black",
@@ -318,23 +318,26 @@
   "turquoise": "Turquoise",
   "gold": "Gold",
   "silver": "Silver",
-  "navy": "Navy",
+  "navy": "Navy Blue",
   "teal": "Teal",
   "lavender": "Lavender",
   "burgundy": "Burgundy",
-  "mint": "Mint",
-  "uppvärmningsyta": "Maximum heating area (m²)",
-  "skorstensanslutning": "Chimney connection",
-  "skorstensanslutningValue": "Top, Rear",
+  "mint": "Mint Green",
+  "uppvärmningsyta": "Max Heating Area (m²)",
+  "skorstensanslutning": "Chimney Connection",
+  "skorstensanslutningValue": "Top, Back",
   "Verkningsgrad": "Efficiency (%)",
-  "gasconsumption": "Gas consumption",
-  "preheatingtime": "Preheating time",
-  "floor": "Floor",
+  "gasconsumption": "Gas Consumption",
+  "preheatingtime": "Preheating Time",
+  "floor": "Back Surface",
   "downloadPdf": "Download PDF",
   "language": "Language",
-  "location": "Delivery",
+  "location": "Deliver to",
   "quantity": "Quantity",
   "select_placeholder": "Select...",
   "showing": "Showing",
-  "of": "of"
+  "of": "of",
+  "chooseOption": "Choose an option",
+  "expectedDelivery": "Expected Delivery Time",
+  "optionsProduct": "Accessories"
 }
