--- a/public/locales/en/footer.json
+++ b/public/locales/en/footer.json
@@ -1,7 +1,7 @@
 {
   "text-copyright": "Copyright",
   "text-all-rights-reserved": "All rights reserved",
-  "widget-title-social": "Social",
+  "widget-title-social": "Follow us",
   "widget-title-contact": "Contact",
   "widget-title-about": "About",
   "widget-title-customer-care": "Customer Care",
@@ -10,29 +10,23 @@
   "link-instagram": "Instagram",
   "link-twitter": "Twitter",
   "link-facebook": "Facebook",
-  "link-youtube": "Youtube",
+  "link-youtube": "YouTube",
   "link-contact-us": "Contact Us",
   "link-email": "info@nätbutiken.ax",
   "link-email-two": "info@nätbutiken.ax",
-  "link-phone": "Call us: +358(0)18 14554",
+  "link-phone": "Call us: +358 (0)18 14554",
   "link-support-center": "Support Center",
   "link-customer-support": "Customer Support",
   "link-about-us": "About Us",
   "link-copyright": "Copyright",
-  "link-faq": "FAQ & Helps",
+  "link-faq": "FAQ",
   "link-shipping": "Shipping & Delivery",
-  "link-exchanges": "Return & Exchanges",
-  "link-privacy": "Privacy policy update",
-  "link-terms": "Terms & conditions",
+  "link-exchanges": "Returns & Exchanges",
+  "link-privacy": "Privacy Policy",
+  "link-terms": "GDPR & Cookies",
   "link-return-policy": "Return Policy",
-  "link-site-map": "Site Map",
-  "link-kranar": "Kranar",
-  "link-pizza": "Pizzaugn",
-  "link-braskamin": "Braskamin",
-  "link-sports-wear": "Sports Wear",
-  "payment-master-card": "Master Card",
-  "payment-visa": "Visa",
-  "payment-paypal": "Paypal",
-  "payment-jcb": "JCB",
-  "payment-skrill": "Skrill"
+  "link-site-map": "Sitemap",
+  "link-kranar": "Faucets",
+  "link-pizza": "Pizza Oven",
+  "link-braskamin": "Wood Stove"
 }
