--- a/public/locales/en/menu.json
+++ b/public/locales/en/menu.json
@@ -1,98 +1,102 @@
 {
   "hushall": "Home & Living",
-  "braskaminer": "Wood-burning Stoves",
+  "braskaminer": "Wood Stoves",
   "taljstenskaminer": "Soapstone Stoves",
   "kaminer": "Stoves",
-  "tillbehor-kaminer": "Accessories for Stoves",
-  "tillbehor-taljstenskaminer": "Accessories for Soapstone Stoves",
-  "eldstader/murspis": "Fireplaces/Masonry Fireplaces",
+  "eldstader-murspisar": "Fireplaces/Masonry Fireplaces",
   "gjutjarnskaminer": "Cast Iron Stoves",
-  "skorsten": "Chimney",
+  "skorstenar": "Chimneys",
   "varmepumpar": "Heat Pumps",
-  "luftvarmepumpar": "Air Source Heat Pumps",
-  "franluftvarmepump": "Exhaust Air Heat Pump",
-  "bergvarmepumpar": "Geothermal Heat Pumps",
-  "jordvarmepump": "Ground Source Heat Pump",
-  "AC": "AC",
+  "luft-luft": "Air-to-Air",
+  "luft-vatten": "Air-to-Water",
+  "franluft": "Exhaust Air",
+  "bergvarme": "Geothermal Heat",
+  "jordvarme": "Ground Source Heat",
+  "ac-kyla": "AC/Cooling",
   "ventilation": "Ventilation",
-  "ftx-aggregat": "FTX Units",
+  "ftx-aggregat": "HRV/ERV Units",
   "mekaniskventilation": "Mechanical Ventilation",
-  "friflode-sjalvdrag": "Natural Draft Ventilation",
-  "golvvärme": "Underfloor Heating",
-  "vvs": "Plumbing",
+  "friflode-sjalvdrag": "Free Flow/Natural Draft",
+  "golvvarme": "Underfloor Heating",
+  "el-golvvarme": "Electric Underfloor Heating",
+  "vattenburen-golvvarme": "Waterborne Underfloor Heating",
+  "vvs": "Plumbing & HVAC",
   "kranar": "Faucets",
   "blandare": "Mixers",
   "handfat": "Sinks",
   "badkar": "Bathtubs",
   "duschar": "Showers",
-  "badrumskranar": "Badrumskranar",
-  "grovkok": "Grovkök",
+  "badrumskranar": "Bathroom Faucets",
+  "grovkok": "Utility Kitchens",
+  "spabad": "Spas",
+  "badtunnor": "Hot Tubs",
   "toastolar": "Toilets",
-  "sol/lagring/elbil": "Solar/Storage/Electric Car",
+  "sol/lagring/elbil": "Solar/Storage/EV",
   "solsystem": "Solar Systems",
   "Batterier": "Batteries",
   "elbilsladdning": "EV Charging",
   "byggvaror": "Building Materials",
   "fonster": "Windows",
   "takstegar": "Roof Ladders",
-  "inredning": "Interior",
+  "inredning": "Interior Design",
   "kok": "Kitchen",
   "kokskranar": "Kitchen Faucets",
-  "diskho": "Sink",
+  "diskho": "Sinks",
   "badrum": "Bathroom",
   "tvattstallskranar": "Washbasin Faucets",
   "badkarsblandare": "Bathtub Mixers",
-  "garderob/forvaring": "Closet/Storage",
-  "hallinredning": "Hallway Furnishing",
-  "vardagsrumsinrening": "Living Room Furnishing",
-  "vitvaror": "Home Appliances",
-  "kylar": "Fridges",
+  "garderob/forvaring": "Wardrobe/Storage",
+  "hallinredning": "Hallway Furniture",
+  "vardagsrumsinrening": "Living Room Furniture",
+  "vitvaror": "Appliances",
+  "kylar": "Refrigerators",
   "frysar": "Freezers",
   "vinkylar": "Wine Coolers",
   "diskmaskiner": "Dishwashers",
   "frysboxar": "Chest Freezers",
-  "kombineradkyl/frys": "Fridge/Freezer Combo",
+  "kombineradkyl/frys": "Combined Fridge/Freezer",
   "flaktar": "Fans",
   "tvattmaskiner": "Washing Machines",
   "torktumlare": "Dryers",
-  "microugn": "Microwave Oven",
-  "hallar": "Hallways",
+  "microugn": "Microwave Ovens",
+  "hallar": "Hobs",
   "ugnar": "Ovens",
   "bastu": "Sauna",
   "elektiskt/bastupriser": "Electric/Sauna Heaters",
   "vedeldade/bastuspisar": "Wood-fired/Sauna Stoves",
   "tillbehor": "Accessories",
-  "fritid": "Leisure",
+  "fritid-tradgard": "Leisure & Garden",
+  "tradgard-utemiljo": "Garden & Outdoor Environment",
   "bastu-inredning": "Sauna Interior",
   "bastu-stugor": "Sauna Cabins",
-  "forfon/atv": "Snow Plow/ATV",
+  "forfon/atv": "ATV Accessories",
   "atv/utv": "ATV/UTV",
   "snoskoter": "Snowmobile",
   "elsparkcyklar": "Electric Scooters",
-  "elcyklar": "Electric Bicycles",
+  "elcyklar": "Electric Bikes",
   "cyklar": "Bicycles",
   "mopeder": "Mopeds",
   "mopedbilar": "Moped Cars",
   "batar/marin": "Boats/Marine",
-  "plotter/ekolod": "Chartplotters/Fish Finders",
+  "plotter/ekolod": "Plotters/Fishfinders",
   "radar": "Radar",
-  "roddbat": "Rowboat",
-  "jetskis": "Jetskis",
+  "roddbat": "Rowing Boat",
+  "jetskis": "Jet Skis",
   "bryggor": "Docks",
   "flytvastar": "Life Jackets",
   "fiske": "Fishing",
   "fiskespon": "Fishing Rods",
   "fiskerulle": "Fishing Reels",
   "fiskedrag": "Fishing Lures",
-  "ekolod": "Fish Finder",
+  "ekolod": "Fishfinders",
   "trollingmotor": "Trolling Motor",
-  "fiskeklader": "Fishing Clothes",
-  "sport": "Sports",
+  "fiskeklader": "Fishing Apparel",
+  "sport": "Sport",
   "golf": "Golf",
   "golfbollar": "Golf Balls",
   "golfklubbor": "Golf Clubs",
   "utrustning": "Equipment",
-  "golfklader": "Golf Clothes",
+  "golfklader": "Golf Apparel",
   "sportklader": "Sportswear",
   "traningsklader": "Workout Clothes",
   "alpin": "Alpine",
@@ -100,7 +104,7 @@
   "skidor": "Skis",
   "menu-fritid-main": "Leisure",
   "menu-tradgard-main": "Garden",
-  "koksinredning": "Kitchen Interiors",
-  "badrumsinredning": "Bathroom Interiors",
+  "koksinredning": "Kitchen Interior",
+  "badrumsinredning": "Bathroom Interior",
   "batterier": "Batteries"
 }
