--- a/public/locales/fi/common.json
+++ b/public/locales/fi/common.json
@@ -50,29 +50,29 @@
     }
   ],
   "products": "tuotteet",
-  "productDesc": "kuvaus",
+  "productDesc": "fi",
   "error-heading": "Näyttää siltä, että olet eksynyt",
   "error-sub-heading": "Emme löydä etsimääsi sivua",
-  "support-heading": "Keskustele tukemme kanssa",
-  "support-sub-heading": "Oletko epävarma? Onko sinulla kysyttävää? Tarvitsetko suosituksen? Jäsenpalvelu on aina täällä auttamassa. Lähetä meille viesti.",
+  "support-heading": "Keskustele tuen kanssa",
+  "support-sub-heading": "Etkö ole varma? Onko sinulla kysyttävää? Tarvitsetko suosituksen? Jäsenpalvelu on aina valmiina auttamaan. Lähetä meille viesti.",
   "app-heading": "Verkkokauppa",
-  "app-sub-heading": "<span> Löydä uusia **Tuotteita** & Osta helposti suoraan myymälästämme </span>",
+  "app-sub-heading": "<span> Löydä uusia <strong>tuotteita</strong> ja shoppaile helposti suoraan kaupastamme </span>",
   "collection-title-one": "Uudet kevätneuleet",
-  "collection-description-one": "Loputtoman monipuolisia uusia tyylejä, jotka sanovat kyllä keväälle. Kausi näyttää valoisalta.",
-  "collection-title-two": "Ytimeen",
-  "collection-description-two": "Loputtoman monipuolisia uusia tyylejä, jotka sanovat kyllä keväälle. Kausi näyttää valoisalta.",
+  "collection-description-one": "Loputtoman monipuoliset uudet tyylit, jotka sanovat kyllä keväälle. Kausi näyttää kirkkaalta.",
+  "collection-title-two": "Ytimeen asti",
+  "collection-description-two": "Loputtoman monipuoliset uudet tyylit, jotka sanovat kyllä keväälle. Kausi näyttää kirkkaalta.",
   "collection-title-three": "Uudet talvineuleet",
-  "collection-description-three": "Loputtoman monipuolisia uusia tyylejä, jotka sanovat kyllä keväälle. Kausi näyttää valoisalta.",
+  "collection-description-three": "Loputtoman monipuoliset uudet tyylit, jotka sanovat kyllä keväälle. Kausi näyttää kirkkaalta.",
   "collection-title-four": "Valmiina juhliin",
-  "collection-description-four": "Studiosta kadulle, kokoelmamme teknisiä, korkean suorituskyvyn aktiivivaatteita on valmistettu",
-  "feature-title-one": "Takaatut säästöt",
-  "feature-description-one": "Jos et säästä jäsenmaksun verran, hyvitämme erotuksen",
+  "collection-description-four": "Studiosta kadulle, teknisten, korkean suorituskyvyn aktiivivaatteidemme kokoelma on tehty",
+  "feature-title-one": "Säästöt taattu",
+  "feature-description-one": "Jos et säästä jäsenmaksusi verran, hyvitämme erotuksen",
   "feature-title-two": "Kokeile riskittömästi",
-  "feature-description-two": "Jos et säästä jäsenmaksun verran, hyvitämme erotuksen",
+  "feature-description-two": "Jos et säästä jäsenmaksusi verran, hyvitämme erotuksen",
   "feature-title-three": "Erittäin nopea toimitus",
-  "feature-description-three": "Jos et säästä jäsenmaksun verran, hyvitämme erotuksen",
+  "feature-description-three": "Jos et säästä jäsenmaksusi verran, hyvitämme erotuksen",
   "feature-title-four": "Yli 1000 tuotetta omakustannushintaan",
-  "feature-description-four": "Jos et säästä jäsenmaksun verran, hyvitämme erotuksen",
+  "feature-description-four": "Jos et säästä jäsenmaksusi verran, hyvitämme erotuksen",
   "breadcrumb-home": "Etusivu",
   "breadcrumb-search": "Haku",
   "breadcrumb-products": "Tuotteet",
@@ -87,25 +87,25 @@
   "text-page-returns": "Palautusoikeus & Peruuttamisoikeus",
   "text-page-privacy-policy": "Tietosuojakäytäntö",
   "text-page-faq": "Usein kysytyt kysymykset",
-  "text-page-support": "Miten voimme auttaa?",
+  "text-page-support": "Mitä haluat apua?",
   "text-page-about": "Meistä",
-  "text-subscribe-heading": "Hanki asiantuntijavinkkejä postilaatikkoosi",
+  "text-subscribe-heading": "Saat asiantuntijavinkkejä sähköpostiisi",
   "text-subscribe-description": "Tilaa uutiskirjeemme ja pysy ajan tasalla.",
   "text-banner-thumbnail": "Bannerin pikkukuva",
   "text-brand-thumbnail": "Brändin pikkukuva",
   "text-support-thumbnail": "Tuen pikkukuva",
-  "text-category-thumbnail": "Tuotemerkin kategoria",
+  "text-category-thumbnail": "Brändikategoria",
   "text-card-thumbnail": "Kortin pikkukuva",
   "text-instagram-thumbnail": "Instagramin pikkukuva",
   "text-app-thumbnail": "Sovelluksen pikkukuva",
-  "text-manage-your": "hallitse",
+  "text-manage-your": "hallitse omaa",
   "text-dashboard": "Hallintapaneeli",
   "text-account-dashboard": "Tilisi hallintapaneelista voit tarkastella",
   "text-order": "Tilaus",
   "text-orders": "Tilaukset",
   "text-status": "Tila",
   "text-actions": "Toiminnot",
-  "text-filters": "Suodattimet",
+  "text-filters": "Suodatin",
   "text-colors": "Värit",
   "text-clear-all": "Tyhjennä kaikki",
   "text-category": "Kategoria",
@@ -130,7 +130,9 @@
   "text-view-cart": "Näytä ostoskori",
   "text-added-to-bag": "Lisätty ostoskoriin",
   "text-view-details": "Näytä tiedot",
+  "text-countryRestriction": "Tätä tuotetta ei vielä myydä maassasi",
   "text-shipping": "Toimitus",
+  "text-free-shipping": "Ilmainen toimitus",
   "text-shipping-address": "Toimitusosoite",
   "text-sub-total": "Välisumma",
   "text-total": "Yhteensä",
@@ -154,21 +156,21 @@
   "text-policy": "käytäntö",
   "text-forgot-password": "Unohtuiko salasana?",
   "text-reset-password": "Palauta salasana",
-  "text-get-in-touch": "Kysy kysymys, niin vastaamme!",
+  "text-get-in-touch": "Kysy, niin vastaamme!",
   "text-find-us-here": "Täältä löydät meidät",
   "text-address": "Osoite",
   "text-address-details": "Strandgatan 4, 22100 Maarianhamina",
   "text-email": "Sähköposti",
-  "text-email-details": "info@natbutiken.ax",
+  "text-email-details": "info@nätbutiken.ax",
   "text-phone": "Puhelin",
   "text-phone-details": "+358 18 14554",
   "text-order-received": "Kiitos. Tilauksesi on vastaanotettu.",
   "text-pay-cash": "Maksa käteisellä toimituksen yhteydessä.",
-  "text-order-details": "Tilaustiedot",
+  "text-order-details": "Tilauksen tiedot",
   "text-details": "Tiedot",
   "text-recent-orders": "viimeisimmät tilaukset",
-  "text-discount": "Sata uutta tuotetta juuri lisätty! Ylimääräinen 20 % alennus valituista tuotteista.",
-  "text-time-over": "Aika on kulunut",
+  "text-discount": "Sata uutta tuotetta juuri lisätty! Ylimääräinen 20% alennus valituista tuotteista.",
+  "text-time-over": "Aika on loppu",
   "text-days": "päivää",
   "text-hours": "tuntia",
   "text-mins": "minuuttia",
@@ -179,21 +181,21 @@
   "text-woman": "Nainen",
   "text-watch": "Kello",
   "text-new-year": "Uusi vuosi",
-  "text-exclusive": "Eksklusiivinen",
+  "text-exclusive": "Ainutlaatuinen",
   "text-sold": "Myyty",
   "text-available": "Saatavilla",
   "text-see-all-product": "Katso kaikki tuotteet",
   "text-section-title": "Osion otsikko",
-  "text-flash-sale": "Pikamyynti",
+  "text-flash-sale": "Flash-ale",
   "text-shop-by-category": "Suositut kategoriat",
-  "text-featured-categories": "Suositellut kategoriat",
+  "text-featured-categories": "Esillä olevat kategoriat",
   "text-browse-categories": "Selaa kategorioita",
-  "text-top-brands": "Suositut tuotemerkit",
-  "text-featured-products": "Myydyimmät tuotteet/Suositellut tuotteet",
-  "text-on-selling-products": "Alennetut tuotteet",
-  "text-top-products": "Parhaat tuotteet",
+  "text-top-brands": "Suosituimmat tuotemerkit",
+  "text-featured-products": "Myydyimmät tuotteet/Esillä olevat tuotteet",
+  "text-on-selling-products": "Alennustuotteet",
+  "text-top-products": "Suosituimmat tuotteet",
   "text-related-products": "Samankaltaiset tuotteet",
-  "text-new-arrivals": "Uudet tuotteet",
+  "text-new-arrivals": "Uutuudet",
   "text-popular-products": "Suositut tuotteet",
   "text-best-sellers": "Myydyimmät",
   "text-casual-wear": "Vapaa-ajan vaatteet",
@@ -202,57 +204,57 @@
   "text-newest": "Uusimmat",
   "text-testimonial": "Suositus",
   "text-popularity": "Suosio",
-  "text-price-low-high": "Hinta: alhainen - korkea",
-  "text-price-high-low": "Hinta: korkea - alhainen",
+  "text-price-low-high": "Hinta: alhaisesta korkeaan",
+  "text-price-high-low": "Hinta: korkeasta alhaiseen",
   "text-instagram": "Instagram",
   "text-twitter": "Twitter",
   "text-facebook": "Facebook",
   "text-youtube": "Youtube",
   "text-login-with-facebook": "Kirjaudu sisään Facebookilla",
   "text-login-with-google": "Kirjaudu sisään Googlella",
-  "text-summer-collection": "Kesämallisto",
+  "text-summer-collection": "Kesäkokoelma",
   "text-subscribe-now": "tilaa nyt",
-  "text-newsletter-title": "Ja saat tarjouksen uudesta mallistosta",
-  "text-newsletter-subtitle": "Tilaa ChawkBazar-uutiskirje saadaksesi päivityksiä uusista tuotteista, erikoistarjouksista ja kampanjoistamme",
+  "text-newsletter-title": "Ja saat tarjouksia uudesta kokoelmasta",
+  "text-newsletter-subtitle": "Tilaa ChawkBazarin uutiskirje saadaksesi päivityksiä uusista saapumisista, erikoistarjouksista ja kampanjoistamme",
   "text-collection-list": "Kokoelmalista",
   "text-collections": "Kokoelmat",
   "text-accept-cookies": "Hyväksy evästeet",
   "text-more-info": "Lisätietoja",
   "text-website": "Verkkosivusto",
   "text-ratings": "Arvostelut",
-  "text-visit-site": "Vieraile tällä sivustolla",
+  "text-visit-site": "Vieraile sivustolla",
   "text-follow": "Seuraa",
   "text-share": "Jaa",
   "text-new": "Uusi",
-  "text-super-shop": "Lähistön superkaupat",
+  "text-super-shop": "Superkaupat lähelläsi",
   "text-call-now": "Soita nyt",
-  "text-cookies-title": "Sivusto käyttää evästeitä parantaakseen käyttökokemustasi. Klikkaamalla hyväksyt tietosuojakäytäntömme.",
-  "text-top-brands-deal": "Parhaiden tuotemerkkien tarjoukset",
+  "text-cookies-title": "Sivusto käyttää evästeitä parantaakseen käyttökokemustasi. Hyväksymällä evästeet hyväksyt tietosuojakäytäntömme.",
+  "text-top-brands-deal": "Parhaiden brändien tarjous",
   "text-upto": "Jopa",
-  "text-60%-discount": "60 % alennus tuotemerkeistä",
+  "text-60%-discount": "60% alennus brändeistä",
   "text-trending-products": "Trendaavat tuotteet",
   "text-trending-collection": "Trendaava kokoelma",
-  "text-recently-view-products": "Viimeksi katsotut tuotteet",
-  "text-scroll-to-top": "Selaa ylös",
+  "text-recently-view-products": "Äskettäin katsotut tuotteet",
+  "text-scroll-to-top": "Vieritä ylös",
   "text-thank-you": "Kiitos tilauksestasi!",
   "text-order-confirmed": "Tilauksen vahvistus",
   "login-helper": "Kirjaudu sisään sähköpostiosoitteellasi ja salasanallasi",
   "registration-helper": "Rekisteröitymällä hyväksyt",
-  "forgot-password-helper": "Lähetämme sinulle linkin salasanan palauttamiseen",
+  "forgot-password-helper": "Lähetämme sinulle linkin salasanan palauttamiseksi",
   "button-load-more": "Lataa lisää tuotteita",
   "button-go-home": "Takaisin etusivulle",
   "button-place-order": "Maksa tilauksesi",
   "button-send-message": "Lähetä viesti",
   "button-submit": "Lähetä",
   "button-view": "näytä",
-  "about": "Tervetuloa Ahvenanmaan Verkkokauppaan – määränpäähäsi, josta voit helposti ostaa tuotteita. Asuitpa sitten Ahvenanmaalla, suunnittelitpa vierailua tai halusitpa vain tutustua eksklusiivisiin tuotteisiimme, meiltä löytyy jotakin kaikille. Täältä löydät laajan valikoiman tuotteita paikallisista herkuista ja käsitöistä aina teknologiaan ja muotiin. Tavoitteenamme on yhdistää verkkokaupan mukavuus Ahvenanmaan parhaaseen tarjontaan. Tee ostoksia helposti ja kätevästi meillä – toimitamme kaikkiin Ahvenanmaan kotitalouksiin.",
+  "about": "Tervetuloa Ahvenanmaan verkkokauppaan – paikkaan, josta voit helposti ostaa tuotteita. Asuitpa Ahvenanmaalla, suunnittelitpa vierailua tai halusitpa vain hyödyntää eksklusiivisia tuotteitamme, meiltä löytyy jokaiselle jotakin. Täältä löydät laajan valikoiman tuotteita, paikallisista herkuista ja käsitöistä tekniikkaan ja muotiin. Tavoitteenamme on yhdistää verkkokaupan mukavuus ja Ahvenanmaan parhaat tarjoukset. Shoppaile helposti ja sujuvasti meillä – toimitamme kaikkiin Ahvenanmaan kotitalouksiin.",
   "button-save": "Tallenna",
   "button-app-store": "App Store",
   "button-play-store": "Play Store",
   "button-subscribe": "Tilaa",
-  "button-men-exclusive": "#miehet eksklusiivinen",
-  "button-women-exclusive": "#naiset eksklusiivinen",
-  "button-view-collection": "Katso kokoelma",
+  "button-men-exclusive": "#miesten yksinoikeus",
+  "button-women-exclusive": "#naisten yksinoikeus",
+  "button-view-collection": "Näytä kokoelma",
   "button-chat-services": "Keskustele tukemme kanssa",
   "tab-all-collection": "Kaikki kokoelmat",
   "nya-produkter": "Uudet tuotteet",
@@ -261,9 +263,9 @@
   "tab-mens-collection": "Miesten kokoelma",
   "tab-womens-collection": "Naisten kokoelma",
   "tab-kids-collection": "Lasten kokoelma",
-  "tab-flash-sale": "Pikamyynti",
+  "tab-flash-sale": "Flash-ale",
   "tab-best-sellers": "Myydyimmät",
-  "tab-featured": "Suositellut",
+  "tab-featured": "Esillä",
   "support-form": "Tukilomake",
   "yes": "Kyllä",
   "no": "Ei",
@@ -275,7 +277,7 @@
   "height": "Korkeus (mm)",
   "width": "Leveys (mm)",
   "depth": "Syvyys (mm)",
-  "vedlängd": "Maksimipituus polttopuille (cm)",
+  "vedlängd": "Max. puun pituus (cm)",
   "effekt": "Teho (W)",
   "voltage": "Jännite (V)",
   "powerConsumption": "Virrankulutus (W)",
@@ -286,9 +288,9 @@
   "batteryLife": "Akun kesto (tuntia)",
   "noiseLevel": "Melutaso (dB)",
   "IPRating": "IP-luokitus",
-  "weightCapacity": "Maksimipainokapasiteetti (kg)",
+  "weightCapacity": "Max. painokapasiteetti (kg)",
   "operatingTemperature": "Käyttölämpötila (°C)",
-  "storageTemperature": "Säilytyslämpötila (°C)",
+  "storageTemperature": "Varastointilämpötila (°C)",
   "humidity": "Kosteus (%)",
   "colorTemperature": "Värilämpötila (K)",
   "lumen": "Valovoima (lm)",
@@ -309,7 +311,7 @@
   "yellow": "Keltainen",
   "orange": "Oranssi",
   "purple": "Violetti",
-  "pink": "Pinkki",
+  "pink": "Vaaleanpunainen",
   "brown": "Ruskea",
   "gray": "Harmaa",
   "beige": "Beige",
@@ -317,22 +319,25 @@
   "gold": "Kulta",
   "silver": "Hopea",
   "navy": "Laivastonsininen",
-  "teal": "Sinisenvihreä",
+  "teal": "Sininenvihreä",
   "lavender": "Laventeli",
   "burgundy": "Viininpunainen",
   "mint": "Mintunvihreä",
-  "uppvärmningsyta": "Maksimilämmityspinta-ala (m²)",
-  "skorstensanslutning": "Savupiippuliitäntä",
-  "skorstensanslutningValue": "Ylhäältä, Takana",
+  "uppvärmningsyta": "Max. lämmityspinta-ala (m²)",
+  "skorstensanslutning": "Savupiipun liitäntä",
+  "skorstensanslutningValue": "Ylhäällä, Takana",
   "Verkningsgrad": "Hyötysuhde (%)",
-  "gasconsumption": "Kaasun kulutus",
+  "gasconsumption": "Kaasunkulutus",
   "preheatingtime": "Esilämmitysaika",
-  "floor": "Lattia",
+  "floor": "Takapinta",
   "downloadPdf": "Lataa PDF",
   "language": "Kieli",
-  "location": "Toimituskohteeseen",
+  "location": "Toimita osoitteeseen",
   "quantity": "Määrä",
   "select_placeholder": "Valitse...",
   "showing": "Näytetään",
-  "of": "alkaen"
+  "of": "/",
+  "chooseOption": "Valitse vaihtoehto",
+  "expectedDelivery": "Odotettu toimitusaika",
+  "optionsProduct": "Lisävarusteet"
 }
