--- a/public/locales/fi/footer.json
+++ b/public/locales/fi/footer.json
@@ -10,23 +10,23 @@
   "link-instagram": "Instagram",
   "link-twitter": "Twitter",
   "link-facebook": "Facebook",
-  "link-youtube": "Youtube",
+  "link-youtube": "YouTube",
   "link-contact-us": "Ota yhteyttä",
   "link-email": "info@nätbutiken.ax",
   "link-email-two": "info@nätbutiken.ax",
   "link-phone": "Soita meille: +358 (0)18 14554",
   "link-support-center": "Tukikeskus",
   "link-customer-support": "Asiakastuki",
-  "link-about-us": "Meistä",
+  "link-about-us": "Tietoa meistä",
   "link-copyright": "Tekijänoikeus",
-  "link-faq": "FAQ",
-  "link-shipping": "Toimitus",
-  "link-exchanges": "Palautus & Vaihto",
+  "link-faq": "UKK",
+  "link-shipping": "Toimitus & Kuljetus",
+  "link-exchanges": "Palautukset & Vaihdot",
   "link-privacy": "Tietosuojakäytäntö",
   "link-terms": "GDPR & Evästeet",
   "link-return-policy": "Palautuskäytäntö",
   "link-site-map": "Sivukartta",
   "link-kranar": "Hanat",
   "link-pizza": "Pizzauuni",
-  "link-braskamin": "Takka"
+  "link-braskamin": "Puuliesi"
 }
